--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Application/Bean Tag.exe"
+export_path="G:/My Drive/Shared Research Folder/Bean Tag.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
